Research question stuk is gefixt

--- a/Python report document-version 1.1.ipynb
+++ b/Python report document-version 1.1.ipynb
@@ -189,7 +189,9 @@
     "<h3 align='left' style='margin-bottom: 0px'>1.2 Sub Saharan Africa <a class=\"anchor\" id=\"SSA\"></a> </h3>\n",
     "Chronic undernourishment is widespread throughout the region of Africa, see figure 2. As can be seen in figure 1, 20.1 percent of the population of Sub Saharan Africa is now undernourished, which corresponds to around 250 million people in Africa. The region remain exposed to food crises and famines triggered by droughts, floods, pest, economic downturns and conflicts [5]. \n",
     "\n",
-    "Futhermore the population of the SSA region is rapidly expanding, namely 670 million in 2000 and 1.06 billion in 2015, see figure 6. This rapid increase in population combined with the effects of climate change form a dangerous mix of factors. Therefore, Sub-Saharan Africa is the only region of the world, where it is expected that the state of hunger will worsen over the coming decades [7]. \n"
+    "Futhermore the population of the SSA region is rapidly expanding, namely 670 million in 2000 and 1.06 billion in 2015, see figure 6. This rapid increase in population combined with the effects of climate change form a dangerous mix of factors. Therefore, Sub-Saharan Africa is the only region of the world, where it is expected that the state of hunger will worsen over the coming decades [7]. \n",
+    "\n",
+    "This is why Sub Saharan Africa is our scope of this data exploration paper. The goal of this report is to gain more insight in the dynamics of the rising hunger in Africa. what is causing it and which policy options need to be worked out that counteract the current trend of rapid rise of hunger, famine and its related side effects. This knowledge is necessary to implement policies that enforce proper food security across the SSA region. Only when the food security is in orde the Sub Saharan Africa region can achieve economic momentum to rise up from poperty and catch on with the other parts of the developing world [8].  \n"
    ]
   },
   {
@@ -277,22 +279,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is why Sub Saharan Africa is our scope of this data exploration paper. The goal of this report is to gain more insight in the data behind the rising hunger in Sub Saharan Africa. What is the detailed current state of hunger in SSA, what is causing it and which policy options need to be worked out that counteract the current trend of rapid rise of hunger, famine and its related side effects. Only when we have this knowledge then, Sub Saharan Africa can achieve the proper economic development to rise up from poperty and catch on with the other parts of the developing world.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h2 align='left' style='margin-bottom: 0px'>2 Methodology and Reseach Goal <a class=\"anchor\" id=\"second-chapter\"></a> </h2>\n",
     "\n",
-    "In this chapter the methodology and research questions are described. As first, an insight is given in the methodologies used. As second the main research question and subquestions are explained. \n",
+    "In this chapter the used methodology and research questions are described. At first, an insight is given in the methodologies used. As second the main research question and subquestions are explained. \n",
     "\n",
     "<h3 align='left' style='margin-bottom: 0px'>2.1 Methodology <a class=\"anchor\" id=\"methodology\"></a> </h3>\n",
     "\n",
     "Within this report, we try to gain more insight behind the data of hunger in Sub Saharan africa. First we will clean and analysed the data by selecting the relevant indicators. By means of critical analysis and interpretation of figures and numbers, we try to find relations in the data to obtain usefull conclusion for our policy recommmendation. Also, relevant primary research on the topic of Zero Hunger and food security will be included to compare our primary research findings. \n",
     "\n",
-    "Python is used as a tool to perform the data analysis within this research. Python as widely used programming language which contains additional packages that are usefull for data analysis. For this research several additional packages have been used, **plotly** has been used to make our detailed graphics. In Plotly the visualisations are displayed in a effeciënt way and we experienced that within plotly their are many possibilities to visualize thee data.  **Seaborn** has been used for regression analysis, **numpy & pandas** for handling large datastructures and **X** for forecasting purposes. All packages that have been used can be seen below: "
+    "Python is used as a tool to perform the data analysis within this research. Python as widely used programming language which contains additional packages that are very powerfull for data analysis and visualisation purposes. Within our computations within Python, several additional packages have been used. For example, **Plotly** has been used to make our detailed graphics. In Plotly visualisations are displayed in a effeciënt way and there are many possibilities to visualize the data.  **Seaborn** has been used for regression analysis while **numpy & pandas** was used for handling large datastructures and X for forecasting purposes. Finally, **scipy** has been used to perform classic statistic analysis, like a t-test. All packages that have been used can be seen below: "
    ]
   },
   {
@@ -340,9 +335,7 @@
     "\n",
     "<h3 align='left' style='margin-bottom: 0px'>2.2 Research questions <a class=\"anchor\" id=\"question\"></a> </h3>\n",
     "\n",
-    "In Sub-Saharan Africa the sustainable development goal of zero hunger is very important, as a lot of people will not have enough food. This threat combined with environmental hazards can let to an increase in people that are in need of food. The combination of datasets about the SDG and datasets about environmental hazards can show us if there is an relation between these trends. To find an answer for this trends, the research question is as follows:\n",
-    "\n",
-    "_'To what extent is hunger in sub-Saharan Africa related to environmental hazards and how will this trend develop until 2030 under the effects of climate change?'_\n",
+    "In order to draft clear policies to end hunger around the world and stopping other negative side effects, five main targets for SDG 2 - Zero Hunger have been set out for 2030 by all United Nations Member States[1]:\n",
     "\n",
     "- Target 2.1: End hunger and ensure access by all people\n",
     "- Target 2.2: End all forms of malnutrition, including achieving targets on stunting and wasting \n",
@@ -350,17 +343,22 @@
     "- Target 2.4: Ensure sustainable food production systems and implement resilient agricultural practices that increase productivity and production.\n",
     "- Target 2.5: Maintain the genetic diversity of seeds, cultivated plants and farmed and domesticated animals and their related wild species.\n",
     "\n",
+    "The negative effects of hunger are enourmous. Malnutrition and related effects slow down development within whole countries. Hunger has a ripple effect that slow down and freezes development. Especially for children, the effects of malnutrition can last a lifetime. Poor nutrition affects physical and mental development which can have a tremendous negative effect on the development of individuals and hereby the economic output of a country [5].\n",
+    "\n",
+    "The frequency of climate-related natural disasters is likely to increase with climate change. Futhermore, the increase in climate extremes could magnifie not only problems for the agriculture industry but could also contribute more conflicts [7]. Therefore it is very important that we include climate extremes within our analysis. \n",
+    "\n",
+    "Our main research question has a wide scope because we want to obtain a general overview of hunger and its causes in Sub-Saharan Africa. The subquestion are derived from the UN targets from Goal 2 - Zero Hunger. Only target 2.5, which describes goals for bio diversity is ommitted from our analysis. Also we included one extra sub question because we also want to look into possible policy options that could improve the current food situation within the SSA region. For this research our main research question is:\n",
+    "\n",
+    "_'To what extent is hunger in sub-Saharan Africa related to environmental hazards and how will this trend develop until 2030 under the effects of climate change?'_\n",
+    "\n",
     "In order to answer this research question several subquestions are defined:\n",
     "- (target 2.1) How did food security develop in the last decades for sub-Saharan Africa?\n",
     "- (target 2.2) what is the development of stunting, wasting overweight, anemia and exclusive breastfeeding in Sub-Saharan Africa?\n",
     "- (target 2.3) How did the food production develop and how is that related to the grow in population?\n",
     "- (target 2.4) What has been the historic trend of environmental hazards in sub-Saharan Africa and the impact on food systems?\n",
-    "- With which policies can contribute to more food security in Sub-Saharan Africa in the future?\n",
-    "target 2.5 nemen we niet mee\n",
+    "- Which policies could contribute to more food security in Sub-Saharan Africa in the future?\n",
     "\n",
-    "First the food security and environmental hazards will be looked at seperatly. The food security is explained by different indicators, such as '% of undernourishment' and the 'Cereal Yield (kg per Hectare)'. As well indicatiors as the total population combined with the total food production can give a good insight in how the food security has developed the last decades. For the environmental hazards ... __@Ivar kan jij hier zeggen wat voor indicators / grafieken er worden verwacht?__\n",
-    "\n",
-    "When both are described there will be looked at the impact of environmental hazards on the food systems. So does more environmental hazards mean less food security? If so, which food systems get affected the most? When you know environmental harzards affect the food systems there can be looked at how this affects the food production output. At last the will be looked at what kind of policies can be implemented so we assure Sub-Saharan Africa of food security."
+    "First the food security and environmental hazards will be looked at seperatly. The food security is explained by different indicators, such as '% of undernourishment' and the 'Cereal Yield (kg per Hectare)'. As well indicatiors as the total population combined with the total food production can give a good insight in how the food security has developed the last decades. For the environmental hazards, firstly the impact and frequency of these hazards will be discussed. After this, the impact of environmental hazards on the food systems shall be analysed. "
    ]
   },
   {
