some text added

--- a/Python report document-version 1-Copy1.1.ipynb
+++ b/Python report document-version 1-Copy1.1.ipynb
@@ -613,11 +613,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h3 align='left' style='margin-bottom: 0px'>4.4 Impact of environmental hazards on food systems<a class=\"44\" id=\"44\"></a> </h3>\n",
+    "\n",
+    "Within this section, several statistical analyses have been carried out. For example a independent t-test have been carried out to compare the means of two groups, namely for countries with a high or low exposure to climate extremes, on the prevelance of undernourishments within those countries.  Futhermore, several regression analysis are carried out to analyse the trend of the impact of environmental hazards. \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
