--- a/Python report document-version 1.1.ipynb
+++ b/Python report document-version 1.1.ipynb
@@ -1110,7 +1110,7 @@
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>3.3 Income group data <a class=\"anchor\" id=\"EMD\"></a> </h3>\n",
     "\n",
-    "For analysis purposes, information about the income group was obtained via OECD standard list of ISO countries. This database contains information about low to high income groups."
+    "To execute an analysis between low & middle income countries, an extra database with this information was obtained via the OECD. The OECD uses a standard codec for country codes (ISO standard). This database could therefore be link to the EMDand WDI data by mergin on the country codes."
    ]
   },
   {
@@ -1490,7 +1490,9 @@
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>4.4 Impact of environmental hazards on food systems<a class=\"44\" id=\"44\"></a> </h3>\n",
     "\n",
-    "Within this section, several statistical analyses have been carried out. For example a independent t-test have been carried out to compare the means of two groups, namely for countries with a high or low exposure to climate extremes, on the prevelance of undernourishments within those countries.  Futhermore, several regression analysis are carried out to analyse the trend of the impact of environmental hazards. \n"
+    "Within this section, several statistical analyses have been carried out. For example a independent t-test have been carried out to compare the means of two groups, namely for countries with a high or low exposure to climate extremes, on the prevelance of undernourishments within those countries.  Futhermore, several regression analysis are carried out to analyse the trend of the impact of environmental hazards. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1616,6 +1618,15 @@
     "            )\n",
     "fig = dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='low-extreme-vs-high-extreme')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**impact of climate extremes on food security**\n",
+    "\n",
+    "Exposure of countries to climate variability and extremes is also a rising trend. In 2017, the average of the PoU in countries with high exposure to climate shocks was 3.2 percentage points above that of countries with low or no exposure. Even more striking is that countries with high exposure have more than doubled the number of undernourished people as those without high exposure."
    ]
   },
   {
