added some text for section 4.4

--- a/Python report document-version 1.1.ipynb
+++ b/Python report document-version 1.1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,8 +284,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DUBBELE PACKAGES MOETEN ER NOG UIT\n",
-    "\n",
     "#Setting up the working environment\n",
     "import os\n",
     "import pandas as pd\n",
@@ -297,14 +295,9 @@
     "import plotly\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "\n",
     "%matplotlib inline\n",
-    "\n",
-    "\n",
     "from pathlib import Path\n",
     "from plotly import tools\n",
-    "from plotly.offline import init_notebook_mode, iplot\n",
-    "from plotly.graph_objs import Contours, Histogram2dContour, Marker, Scatter\n",
     "from scipy import stats\n",
     "\n",
     "#packages used for forecast of undernourishment\n",
@@ -327,8 +320,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__statsmodels: nog in te vullen door @Martijn mits grafiek in verslag__\n",
-    "\n",
     "<h3 align='left' style='margin-bottom: 0px'>2.2 Research questions <a class=\"anchor\" id=\"question\"></a> </h3>\n",
     "\n",
     "In order to draft clear policies to end hunger around the world and stopping other negative side effects, five main targets for SDG 2 - Zero Hunger have been set out for 2030 by all United Nations Member States[1]:\n",
@@ -388,7 +379,7 @@
     "#melt WDI dataframe value of indicators for years into one column\n",
     "df = pd.melt(WDI_SSA,id_vars = [\"Country Name\",\"Country Code\",\"Indicator Name\",\"Indicator Code\"], var_name = \"Years\")\n",
     "# Sort the values first by Country Name and then by Years\n",
-    "df = df.sort_values([\"Country Name\", \"Years\"])\n"
+    "df = df.sort_values([\"Country Name\", \"Years\"])"
    ]
   },
   {
@@ -827,7 +818,13 @@
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>4.4 Impact of environmental hazards on food systems<a class=\"44\" id=\"44\"></a> </h3>\n",
     "\n",
-    "Within this section, several statistical analyses have been carried out. For example a independent t-test have been carried out to compare the means of two groups, namely for countries with a high or low exposure to climate extremes, on the prevelance of undernourishments within those countries.  Futhermore, several regression analysis are carried out to analyse the trend of the impact of environmental hazards. \n",
+    "Within this section, several analyses have been carried out to estimate the effects of environmental hazards on the food systems. We have run an indepenent t-test to compare the means of two groups, namely for countries with a high or low exposure to climate extremes, on the prevelance of undernourishments within those countries. Futhermore, several regression analysis are carried out to analyse the trend of the impact of environmental hazards. \n",
+    "\n",
+    "Of all natural hazards that are stored in the EMD-database, floods, droughts and storms affect the food production the most. \n",
+    "Of all natural hazards, floods, droughts and tropical storms affect food production the most. \n",
+    "in particular causes more than 80 percent of the\n",
+    "total damage and losses in agriculture, especially\n",
+    "for the livestock and crop production subsectors. \n",
     "\n",
     "\n"
    ]
@@ -1158,7 +1155,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 align='left' style='margin-bottom: 0px'>4.5 Future of food security in Sub-Saharan Africa  <a class=\"45\" id=\"EMD\"></a> </h3>"
+    "**Damage by environmental hazards** \n",
+    "\n",
+    "According to the FAO, 2018 more than 25 percent of all economic losses and damages caused by medium and large cale environmental hazards occur in the agriculture sector of developing countries. Where extreme climate events lead to reoccurring disasters, the accumulated costs are even more significant [7]. For example, between 2006 and 2013 the Philippines was struck by 75 disasters – mostly typhoons, tropical storms and floods. The total damage consisted of a total of 3.8 billlion USD to the countries agriculture sector [9].\n",
+    "\n",
+    "For our data, the recorded total damage seem rather marginal to what other literature is reporting over disaster related costs. But what we can see from the graph and regression line is that the total cost are rising for the reported period. Which indicates that for the SSA region environmental hazard more and more affect the agriculture sector. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 align='left' style='margin-bottom: 0px'>4.5 Future of food security in Sub-Saharan Africa  <a class=\"45\" id=\"EMD\"></a> </h3>\n",
+    "\n",
+    "The frequency of environmental hazards is going up in the period from 1960 to 2015. For the last two years we have to consider the limation of this dataset, because it is possible that for 2015-2017 a lot environmental hazards have not been added to the EMD Database.\n",
+    "\n",
+    "Flood cause the most climate-related disasters globally, with flood-related disasters seeing the highest increase of 65% in occurence over the last 25 years. For storms, the frequency is also going up, although not as high as for floods. \n"
    ]
   },
   {
@@ -1198,17 +1210,24 @@
     "        x = x,\n",
     "        y = y,\n",
     "        mode = \"markers\",\n",
-    "        name = 'Damage',\n",
+    "        name = 'Frequency',\n",
     "        line=dict(width=0.1,color = porange))\n",
     "        \n",
     "regression_data_damage = pd.DataFrame({\"Total Frequency per year\" : list(total_frequency['frequency']), \"year\" : list(total_frequency['year'])})\n",
     "\n",
-    "(regression, path) = regression_path(regression_data_damage,\"Total Frequency per year\",4)\n",
-    "layout = add_layout(\"Figure 10 <br>Target 2.4: Total frequency of environmental hazards with regression\",'Total damage in US dollars ($)',0,100)\n",
+    "(regression, path) = regression_path(regression_data_damage,\"Total Frequency per year\",2)\n",
+    "layout = add_layout(\"Figure 10 <br>Target 2.4: Total frequency of environmental hazards with regression\",'Total frequency',0,100)\n",
     "\n",
     "data = [trace, regression]     \n",
     "fig = dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='regression-frequency')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Floods cause more climate-related disasters globally than any other extreme climate event, with flood-related disasters seeing the highest increase – 65 percent – in occurrence over the last 25 years. The frequency of storms is not increasing as much as that of floods, but storms are the second most frequent driver of climate-related disasters."
    ]
   },
   {
@@ -1334,7 +1353,9 @@
     "\n",
     "**[8] PYData.org (n.d.) Using seaborn.regplot**\n",
     "\n",
-    "URL: https://seaborn.pydata.org/generated/seaborn.regplot.html"
+    "URL: https://seaborn.pydata.org/generated/seaborn.regplot.html\n",
+    "\n",
+    "**[9] FAO. 2015. The impact of disasters on agriculture and food security. Rome.**"
    ]
   },
   {
