--- a/Python report document-version 1.1.ipynb
+++ b/Python report document-version 1.1.ipynb
@@ -101,9 +101,8 @@
     "- [4.3 Development of food production](#43)\n",
     "- [4.4 Impact of environmental hazards on food systems](#44)  \n",
     "- [4.5 Future of food security in Sub-Saharan Africa](#45) \n",
-    "- [4.6 Discussion of results](#46)\n",
     "\n",
-    "#### [5  Policy recommendation](#fift-chapter)\n",
+    "#### [5  Conclusion](#fift-chapter)\n",
     "\n",
     "#### [6 References](#ref)"
    ]
@@ -357,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfc = pd.read_csv(\"countriescodes.csv\", sep = \",\", encoding = 'l')\n",
+    "dfc = pd.read_csv(\"countriescodes.csv\", sep = \",\", encoding = 'latin-1')\n",
     "l = dfc[dfc['sub-region'] == \"Sub-Saharan Africa\"][\"alpha-3\"]\n",
     "region = pd.Series([\"SSF\",\"WLD\"])\n",
     "l = l.append(region)\n",
@@ -463,14 +462,8 @@
     "<h3 align='left' style='margin-bottom: 0px'>4.1 State of hunger in Sub-Saharan Africa   <a class=\"question1\" id=\"41\"></a> </h3>\n",
     "\n",
     "As can be derived from the first two graphs presented in chapter 1, the prevelance of undernourishment in Sub Saharan Africa is rising for two consecutive years. The situation is mainly getting worse in Liberia, the Central Africa Republic, Zambia, Zimbabwe and Madagascar, which all have a PoU higher dan 40%. For the SSA region as a whole food scarcity is affecting almost 21 percent of the population (more than 250 million people). Without increased efforts, the world will fall far short of achieving the SDG target of eradicating hunger by 2030.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Uitleg over de functies hier beneden"
+    "\n",
+    "For several charts in which we compare Sub-Saharan Africa to the World functions are used. The called function is 'data_plot' wherin the 'data_return' function is called. The 'data_return' creates a dataframe for the indicator code given in 'data_plot' and sets the traces for the plot. In 'data_plot' several inputs, such as the title and range of the y-ax, are entered. Within this function the layout of the graph is determined and the graph gets plotted.\n"
    ]
   },
   {
@@ -559,7 +552,16 @@
    "metadata": {},
    "source": [
     "<h3 align='left' style='margin-bottom: 0px'>4.2 Development of malnutrition indicators  <a class=\"question2\" id=\"42\"></a> </h3>\n",
-    "How the graph is made"
+    "\n",
+    "The five indicators in figure 3 are about healthy nutrition. They are a measure for how Sub-Saharan Africa is doing regarding malnutrition. The malnutrition indicators concist of the following five indicators:\n",
+    "\n",
+    "- Stunting\n",
+    "- Wasting\n",
+    "- Overweight\n",
+    "- Anemia\n",
+    "- Exclusive breastfeeding\n",
+    "\n",
+    "These indicators are shown in figure 3 in between 2010 - 2017."
    ]
   },
   {
@@ -637,37 +639,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The five indicators in figure 3 are about healthy nutrition. They are a measure for how Sub-Saharan Africa is doing regarding malnutrition. \n",
+    "Stunting is according to the WHO the effect where there is impaired growth and development that children experience from poor nutrition, repeated infection, and inadequate psychosocial stimulation. Children are defined as stunted if their height-for-age is more than two standard deviations below the WHO Child Growth Standards median. We can see that the number of stunting is declining between 2010 and 2017 (from 37,7 to 34,1). However, this is still high compared to the World.\n",
     "\n",
-    "Stunting is according to the WHO the effect where there is impaired growth and development that children experience from poor nutrition, repeated infection, and inadequate psychosocial stimulation. Children are defined as stunted if their height-for-age is more than two standard deviations below the WHO Child Growth Standards median. We can see that the number of stunting is declining between 2010 and 2017 (from 37,7 to 34,1). However, this is still high compared to the World. \n",
-    "Wasting is the effect where a child has low weight for their age. unfortunately there is almost no data, but we can see that in 2017 the numbers for Sub-Saharan Africa and the World are exactly the same.\n",
-    "\n",
-    "Whereas overweight in the World is rising, in Sub-Saharan Africa it is declining, which is good progression. \n",
+    "Wasting is the effect where a child has low weight for their age. Unfortunately there is almost no data, but we can see that in 2017 the numbers for Sub-Saharan Africa and the World are exactly the same. Whereas overweight in the World is rising, in Sub-Saharan Africa it is declining, which is good progression.\n",
     "\n",
     "Anemia is also slightly declining (from 40 in 2010 to 38.9 in 2017), whereas in the World it is rising (from 29.9 in 2010 to 23.8 in 2017). Anemia is a blood disease which is in particular dangerous for (pregnant) women and children. Therefor Anemia here is measured for women from the age 15 to 45 in their reproductive age. Although the number in Sub-Saharan Africa may be slightly declining it is still more than 1 in 3 women that suffers from this disease, which is unacceptable.\n",
     "\n",
-    "For the indicator of Exclusive Breastfeeding there is only data for one year.Therefor we cannot spot a trend but we can see that it differs not that much for Sub-Saharan Africa and the World in the year 2013.\n",
-    "\n",
-    "Overall we can conclude that the indicators for malnutrition are worse in Sub-Saharan Africa when comparing it to the World."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Uitleg over de twee functies"
+    "For the indicator of Exclusive Breastfeeding there is only data for one year. Therefore we cannot spot a trend but we can see that it differs not that much for Sub-Saharan Africa and the World in the year 2013. Overall we can conclude that the indicators for malnutrition are worse in Sub-Saharan Africa when comparing it to the World."
    ]
   },
   {
@@ -1239,9 +1217,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A second forecast is established for the percentage of undernourishment in Sub-Saharan Africa. The forecast has been made using the ARIMA method. Within this method a Autocorrelation and Partial Autocorrelation are created. Based on those figures (https://people.duke.edu/~rnau/411searw.htm) the forecast is created with a seasonal random walk.\n",
+    "__Forecast of Prevelance of Undernourishment__\n",
     "\n",
-    "As can be seen from the figure the undernourishment is very uncertain, but the general trend will be a rise off the undernourishment in Sub-Saharan Africa. The uncertainty can be explained by the data that is available. The undernourishment is measured once a year, so for this forecast only 17 data points has been used. "
+    "A second forecast is established for the percentage of undernourishment in Sub-Saharan Africa. The forecast has been made using the ARIMA method. Within this method a Autocorrelation and Partial Autocorrelation are created. Based on those figures [10] the forecast is created with a seasonal random walk. Because we want to forecast the unkown the forecasting starts for the year 2017, because data of 2017 is not known. This is why there can be seen a gap between observed and forecasted lines."
    ]
   },
   {
@@ -1317,18 +1295,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 align='left' style='margin-bottom: 0px'>4.6 Discussion of results  <a class=\"question6\" id=\"46\"></a> </h3>\n",
-    "\n",
-    "Give a brief summary of the answers of all subquestions °"
+    "As can be seen from the figure the undernourishment is very uncertain, but the general trend will be a rise off the undernourishment in Sub-Saharan Africa. The uncertainty can be explained by the data that is available. The undernourishment is measured once a year, so for this forecast only 17 data points has been used. It can be concluded that the forecast has so much uncertainty in how undernourishment will develop in the coming, that it cannot be stated that it will rise or fall."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 align='left' style='margin-bottom: 0px'>Chapter 5 Policy recommendation  <a class=\"question1\" id=\"fourth-chapter\"> </h2>\n",
+    "<h2 align='left' style='margin-bottom: 0px'>Chapter 5 Conclusion  <a class=\"question1\" id=\"fourth-chapter\"> </h2>\n",
+    " \n",
+    "Throughout this report there is described the state of Food Security in Sub-Saharan Africa and how environmental hazards will affect the food security in Sub-Saharan Africa. Therefore the following main research question has been identified:\n",
     "\n",
-    "Answer the research question and give brief policy recommendation maybe use FAO paper \n"
+    "'To what extent is hunger in sub-Saharan Africa related to environmental hazards and how will this trend develop until 2030 under the effects of climate change?'\n",
+    "\n",
+    "The last decades the food security has developed rather good in Sub-Saharan Africa. Prevelance of Undernourishment has dropped from 27.5% to 21.3% of the population. Also the depth of the food deficit has dropped from 250 kcal in 1992 to 130 kcal in 2016 for the SSA-region. Warning is that the last few years the prevelance of Undernourishment was rising again and that the food deficit has stabilized around 130 kcal. On the long term Sub-Saharan Africa has developed rather good, while on the short term it is really alarming that these downing trends have been stopped and even are increasing. In comparison the average of the world's Prevelance of Undernourishment was in 2016 10.8%, Sub-Saharan Africa is still a long way from achieving this.\n",
+    "\n",
+    "The indicators of malnutrition have also been compared between the World and Sub-Saharan Africa in the timeframe of 2010-2017. It stated that stunting, overweight and Anemia are declining in Sub-Saharan Africa. For Stunting and Anemia the declining is good, but still a long way when compared to the world. That the overweight is declining is exaclty quite interesting, because in the World overweight rising. For the indicators wastings and exclusive breastfeedings not much data was available. But an comparison could be made for one year, wherein both indicators score almost the same as the world. Overall we can conclude that the indicators for malnutrition are worse in Sub-Saharan Africa when comparing it to the World.\n",
+    "\n",
+    "So lets take a closer look at the food production development. It shows that the food production has rised for around 30% compared with 2004. On the other hand there can also be seen a grow in population. From our results it turned out that there is no abnormal difference between population growth and food production growth.\n",
+    "\n",
+    "Overall conclusion\n",
+    "\n",
+    "Part 1: (target 2.4) What has been the historic trend of environmental hazards in sub-Saharan Africa and the impact on food systems?\n",
+    "\n",
+    "Part 2: How will these trends develop\n",
+    "\n",
+    "The forecast for the Prevelance of Undernourishment in Sub-Saharan Africa shows is a very uncertain future in which the prevelance in 2030 could either go towards the 40% or decline to nearly 15%.\n",
+    "\n",
+    "The effects of climate change cannot be predicted. To contribute to more food security some possible policies will be mentioned in which the effects of climate change can hopefully be minimized. The first policy would be to make Sub-Saharan Africa more resilient fore environmental hazards and affects of climate change. A second policy contains the increasing of Cereal Yield by using more efficient ways of agriculture. For instance, grow crops that can handle droughts or crops that can handle floods (like rice). "
    ]
   },
   {
@@ -1360,7 +1354,11 @@
     "\n",
     "URL: https://seaborn.pydata.org/generated/seaborn.regplot.html\n",
     "\n",
-    "**[9] FAO. 2015. The impact of disasters on agriculture and food security. Rome.**"
+    "**[9] FAO. 2015. The impact of disasters on agriculture and food security. Rome.**\n",
+    "\n",
+    "**[10] Robert Nau. 2018. ARIMA models for time series forecasting**\n",
+    "\n",
+    "URL: https://people.duke.edu/~rnau/411searw.htm)"
    ]
   },
   {
@@ -1387,7 +1385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
